--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "@nomiclabs/hardhat-ethers": "^2.0.4",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "^4.3.4",
+    "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.3",
-    "hardhat": "^2.8.1"
+    "hardhat": "^2.8.1",
+    "hardhat-abi-exporter": "^2.7.2"
   }
 }
